# trueskill-rs

./: Cargo.toml
benches/: bench.rs
src/: lib.rs  main.rs  quality.rs
