[package]
name = "trueskill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
    name = "qualitybench"
    harness = false
    path = "benches/bench.rs"

[dependencies]
nalgebra = "0.31"
itertools = "0.10"
num-traits = "0.2"
rayon="1.5"
rand="0.8"

[dev-dependencies]
    criterion = "0.3"
    pprof = {version="0.9.1", features=["flamegraph", "criterion"]}

[profile.release]
    debug=1
